# openapi.yml
@@ -4,7 +4,7 @@ info:
   description: ''
   version: 1.0.0
 servers:
-  - url: http://localhost:9292/api/v1
+  - url: http://localhost:8000
 tags:
   - name: namespaces
   - name: search
@@ -289,6 +289,45 @@ paths:
                 type: array
                 items:
                   type: object
+
+  /oca-bundle:
+    post:
+      summary: Creates an OCA Bundle from OCAfile
+      requestBody:
+        content:
+          text/plain:
+            schema:
+              type: string
+      responses:
+        '200':
+          description: OCA Bundle created successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  type: object
+                  properties:
+                    success:
+                      type: boolean
+                    said:
+                      type: string
+
+  /oca-bundle/{said}:
+    get:
+      summary: Get OCA Bundle
+      parameters:
+        - name: said
+          in: path
+          required: true
+          description: OCA Bundle SAID
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful response
+        '404':
+          description: Bundle not found
 
 components:
   securitySchemes:
